# gremy-homepage

./: .gitignore  .gitmodules  Cargo.toml  Config.toml  Notes  build-release.sh  build.sh  notes  prepare-host.sh  rebuild-client-restart-server.sh  rust-toolchain  rustfmt.toml  upload.sh  watch.bat
client/: Cargo.toml
client/src/: benches.rs  duration.rs  hobo_plus.rs  lib.rs  prelude.rs  widgets.rs
client/src/global_style/: fonts.rs  mod.rs
client/src/pages/: debug.rs  homepage.rs  mod.rs  real.rs  stream.rs
client/src/pages/real/: main.rs  one.rs
client/src/style/: colors.rs  fonts.rs  mod.rs  text.rs
client/src/windows/: debug.rs  homepage.rs  main.rs  mod.rs
server/: Cargo.toml  Config.toml  response.html
server/src/: main.rs  prelude.rs
server/src/middleware/: mod.rs  redirect.rs
server/ssl/: cert.pem  privkey.pem
shared/: Cargo.toml
shared/src/: lib.rs  prelude.rs  shared_prelude.rs
tools/: build-client.sh  build-server.sh  build.sh  rebuild-client-restart-server.sh  restart-server.sh
tools/release/: build-client-release.sh  build-release.sh  build-server.sh  build.sh  deploy.sh
xtask/: Cargo.toml
xtask/src/: main.rs
