[workspace]

members = [
	"server",
	"shared",
	"client",
]

[patch.crates-io]
hobo = { path = "hobo/hobo" }
hobo_derive = { path = "hobo/hobo_derive" }
hobo_css = { path = "hobo/hobo_css" }
hobo_css_macros = { path = "hobo/hobo_css_macros" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
