[workspace]
resolver = "2"

members = [
	"server",
	"shared",
	"client",
	"xtask",
]

[patch.crates-io]
hobo = { path = "hobo/hobo" }
hobo_derive = { path = "hobo/hobo_derive" }
hobo_css = { path = "hobo/hobo_css" }
hobo_css_macros = { path = "hobo/hobo_css_macros" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.wasm-release]
inherits = "release"
strip = "symbols"
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
