[package]
name = "client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1"
futures-signals = "0.3"
hobo = { version = "0.3", features = ["experimental"] }
js-sys = "0.3"
log = "0.4"
once_cell = "1"
paste = "1"
#reqwest = { version = "0.11", features = ["gzip", "brotli", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
smart-default = "0.6"
tap = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wasm-mt = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
	"DomRect",
]
