[package]
name = "client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1"
hobo = { version = "0.4", features = ["experimental"] }
js-sys = "0.3"
log = "0.4"
once_cell = "1"
paste = "1"
#reqwest = { version = "0.11", features = ["gzip", "brotli", "json", "rustls-tls", "stream"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
smart-default = "0.7"
tap = "1"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
# wasm-mt = "0.1"
serde-wasm-bindgen = "0.6"
shrinkwraprs = "0.3.0"
async-timer = "=1.0.0-beta.15"
rand = { version =  "0.9.0-beta.1", features = ["std_rng"] }
# wasm-bindgen = { version = "0.2", features = ["serde-serialize", "strict-macro", "enable-interning"] }
hobo-plus = { path = "../hobo-plus" }
utils = { path = "../utils" }

[dependencies.web-sys]
version = "0.3"
features = [
	"DomRect",
	"Performance",
	"Location",
	"History",
]
