[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]

actix = "0.12"
actix-files = "0.6.0-beta.8"
actix-service = "2"
actix-web = { version = "4.0.0-beta.10", features = ["rustls"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
#log-derive = "0.4"
minifier = "0.0.41"
minify = "1"
once_cell = "1"
reqwest = { version = "0.11", features = ["gzip", "brotli", "json", "rustls-tls", "stream"] }
rustls = "0.20"
rustls-pemfile = "0.2"
serde = "1"
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1.12", features = ["full"] }
toml = "0.5"
