[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = { version = "4", features = ["rustls"] }
# actix-cors = "0.5"
actix-service = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.11", features = ["color"] }
futures = "0.3"
log = "0.4"
#log-derive = "0.4"
minifier = "0.3"
minify = "1"
once_cell = "1"
reqwest = { version = "0.12", features = ["gzip", "brotli", "json", "rustls-tls", "stream"] }
rustls = "0.20"
rustls-pemfile = "1"
serde = "1"
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1.25", features = ["full"] }
toml = "0.8"
