[package]
name = "shared"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
js-sys = { version = "0.3", features = ["futures-core-03-stream"] }
reqwest = "0.12"
tap = "1"
chrono = { version = "0.4", features = ["serde"] }
